--- a/BACKEND/NODE AND EXPRESS JS/package.json
+++ b/BACKEND/NODE AND EXPRESS JS/package.json
@@ -19,6 +19,7 @@
     "express": "^4.19.2",
     "express-async-errors": "^3.1.1",
     "express-async-handler": "^1.2.0",
+    "express-session": "^1.18.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.4.0",
     "morgan": "^1.10.0",
