--- a/BACKEND MONGOOSE BOILERPLATE/NODE AND EXPRESS TS/package.json
+++ b/BACKEND MONGOOSE BOILERPLATE/NODE AND EXPRESS TS/package.json
@@ -1,7 +1,7 @@
 {
   "name": "node-and-express-ts",
   "version": "1.0.0",
-  "description": "CRUD API with Authentication using Node and Express ts",
+  "description": "CRUD API with Multiple Images, Authentication and Authorization using Node and Express ts",
   "main": "server.js",
   "scripts": {
     "build": "npx tsc",
@@ -19,7 +19,6 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
-    "express-async-errors": "^3.1.1",
     "express-async-handler": "^1.2.0",
     "express-session": "^1.18.0",
     "jsonwebtoken": "^9.0.2",
@@ -34,6 +33,7 @@
   "devDependencies": {
     "@types/bad-words": "^3.0.3",
     "@types/bcrypt": "^5.0.2",
+    "@types/compression": "^1.7.5",
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
     "@types/express-session": "^1.18.0",
