--- a/BACKEND MONGOOSE BOILERPLATE/NODE AND FASTIFY TS/package.json
+++ b/BACKEND MONGOOSE BOILERPLATE/NODE AND FASTIFY TS/package.json
@@ -3,9 +3,9 @@
   "version": "1.0.0",
   "main": "server.js",
   "scripts": {
-    "start": "node server",
-    "format": "prettier --write \"src/**/*.js\"",
-    "dev": "nodemon server"
+    "build": "npx tsc",
+    "format": "prettier --write \"src/**/*.ts\"",
+    "dev": "concurrently \"npx tsc --watch\" \"nodemon -q dist/server.js\""
   },
   "author": "GabTheGreat25",
   "license": "ISC",
@@ -26,11 +26,19 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.4.1",
     "multer-storage-cloudinary": "^4.0.0",
+    "typescript": "^5.4.5",
     "uuid": "^9.0.1"
   },
   "devDependencies": {
+    "@types/bad-words": "^3.0.3",
+    "@types/bcrypt": "^5.0.2",
+    "@types/jsonwebtoken": "^9.0.6",
+    "@types/mongoose": "^5.11.97",
+    "@types/node": "^20.12.12",
+    "@types/uuid": "^9.0.8",
+    "concurrently": "^8.2.2",
     "nodemon": "^3.1.3",
-    "prettier": "^3.3.1"
-  },
-  "type": "module"
+    "prettier": "^3.3.1",
+    "ts-node": "^10.9.2"
+  }
 }
