--- a/BACKEND MONGOOSE BOILERPLATE/NODE AND EXPRESS TS/package.json
+++ b/BACKEND MONGOOSE BOILERPLATE/NODE AND EXPRESS TS/package.json
@@ -36,6 +36,7 @@
     "@types/compression": "^1.7.5",
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
+    "@types/http-errors": "^2.0.4",
     "@types/jsonwebtoken": "^9.0.6",
     "@types/mongoose": "^5.11.97",
     "@types/morgan": "^1.9.9",
