--- a/BACKEND MONGOOSE BOILERPLATE/NODE AND EXPRESS JS/package.json
+++ b/BACKEND MONGOOSE BOILERPLATE/NODE AND EXPRESS JS/package.json
@@ -13,18 +13,20 @@
   "dependencies": {
     "bad-words": "^3.0.4",
     "bcrypt": "^5.1.1",
-    "cloudinary": "^2.2.0",
+    "cloudinary": "^1.35.0",
     "compression": "^1.7.4",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "express-async-handler": "^1.2.0",
+    "handlebars": "^4.7.8",
     "http-errors": "^2.0.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.4.0",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
     "multer-storage-cloudinary": "^4.0.0",
+    "nodemailer": "^6.9.14",
     "uuid": "^9.0.1",
     "validator": "^13.12.0"
   },
