--- a/BACKEND MONGOOSE BOILERPLATE/NODE AND EXPRESS TS/package.json
+++ b/BACKEND MONGOOSE BOILERPLATE/NODE AND EXPRESS TS/package.json
@@ -4,28 +4,30 @@
   "description": "CRUD API with Multiple Images, Authentication and Authorization using Node and Express ts",
   "main": "server.js",
   "scripts": {
-    "build": "npx tsc",
+    "build": "npx tsc && npx copyfiles -u 1 src/views/**/* dist/src",
     "format": "prettier --write \"src/**/*.ts\"",
-    "start": "ts-node server.ts",
-    "dev": "concurrently \"npx tsc --watch\" \"nodemon -q dist/server.js\""
+    "start": "node dist/server.js",
+    "dev": "npx tsc && npx copyfiles -u 1 src/views/**/* dist/src && nodemon dist/server.js"
   },
   "author": "GabTheGreat25",
   "license": "ISC",
   "dependencies": {
     "bad-words": "^3.0.4",
     "bcrypt": "^5.1.1",
-    "cloudinary": "^2.2.0",
+    "cloudinary": "^1.35.0",
     "compression": "^1.7.4",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "express-async-handler": "^1.2.0",
+    "handlebars": "^4.7.8",
     "http-errors": "^2.0.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.4.0",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
     "multer-storage-cloudinary": "^4.0.0",
+    "nodemailer": "^6.9.14",
     "typescript": "^5.4.5",
     "uuid": "^9.0.1",
     "validator": "^13.12.0"
@@ -42,8 +44,10 @@
     "@types/morgan": "^1.9.9",
     "@types/multer": "^1.4.11",
     "@types/node": "^20.12.12",
+    "@types/nodemailer": "^6.4.15",
     "@types/uuid": "^9.0.8",
     "concurrently": "^8.2.2",
+    "copyfiles": "^2.4.1",
     "nodemon": "^3.1.0",
     "prettier": "^3.2.5",
     "ts-node": "^10.9.2"
