--- a/BACKEND MONGOOSE BOILERPLATE/NODE AND FASTIFY JS/package.json
+++ b/BACKEND MONGOOSE BOILERPLATE/NODE AND FASTIFY JS/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "fastify-js-practice",
+  "name": "node-and-fastify-js",
   "version": "1.0.0",
   "main": "server.js",
   "scripts": {
@@ -9,7 +9,7 @@
   },
   "author": "GabTheGreat25",
   "license": "ISC",
-  "description": "",
+  "description": "CRUD API with Multiple Images, Authentication and Authorization using Node and Fastify js",
   "dependencies": {
     "@fastify/cors": "^9.0.1",
     "@fastify/formbody": "^7.4.0",
@@ -17,14 +17,16 @@
     "@fastify/multipart": "^8.2.0",
     "bad-words": "^3.0.4",
     "bcrypt": "^5.1.1",
-    "cloudinary": "^2.2.0",
+    "cloudinary": "^1.35.0",
     "dotenv": "^16.4.5",
     "fastify": "^4.27.0",
     "fastify-multer": "^2.0.3",
+    "handlebars": "^4.7.8",
     "http-errors": "^2.0.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.4.1",
     "multer-storage-cloudinary": "^4.0.0",
+    "nodemailer": "^6.9.14",
     "uuid": "^9.0.1"
   },
   "devDependencies": {
