--- a/BACKEND MONGOOSE BOILERPLATE/NODE AND NEST TS/package.json
+++ b/BACKEND MONGOOSE BOILERPLATE/NODE AND NEST TS/package.json
@@ -30,12 +30,14 @@
     "bcrypt": "^5.1.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
-    "cloudinary": "^2.4.0",
+    "cloudinary": "^1.35.0",
     "dotenv": "^16.4.5",
+    "handlebars": "^4.7.8",
     "mongoose": "^8.5.2",
     "multer": "^1.4.5-lts.1",
     "multer-storage-cloudinary": "^4.0.0",
     "nest-router": "^1.0.9",
+    "nodemailer": "^6.9.14",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1",
     "streamifier": "^0.1.1",
@@ -47,9 +49,11 @@
     "@nestjs/testing": "^10.3.10",
     "@types/bcrypt": "^5.0.2",
     "@types/express": "^4.17.21",
+    "@types/handlebars": "^4.0.40",
     "@types/jest": "^29.5.12",
     "@types/multer": "^1.4.11",
     "@types/node": "^20.14.14",
+    "@types/nodemailer": "^6.4.15",
     "@types/streamifier": "^0.1.2",
     "@types/supertest": "^6.0.2",
     "@types/uuid": "^9.0.8",
