--- a/FRONTEND REACT VITE MILLION BOILERPLATE/package.json
+++ b/FRONTEND REACT VITE MILLION BOILERPLATE/package.json
@@ -13,6 +13,7 @@
   },
   "author": "GabTheGreat25",
   "dependencies": {
+    "@gradin/tailwindcss-scrollbar": "^3.0.1",
     "million": "^3.1.11",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
@@ -25,12 +26,17 @@
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-react-swc": "^3.5.0",
+    "daisyui": "^4.12.10",
     "eslint": "^9.8.0",
     "eslint-plugin-react": "^7.35.0",
     "eslint-plugin-react-hooks": "^5.1.0-rc.0",
     "eslint-plugin-react-refresh": "^0.4.9",
     "globals": "^15.9.0",
     "prettier": "^3.3.3",
+    "tailwind-scrollbar-hide": "^1.1.7",
+    "tailwindcss": "^3.4.9",
+    "tailwindcss-animate": "^1.0.7",
+    "tailwindcss-debug-screens": "^2.2.1",
     "vite": "^5.4.0"
   }
 }
